# AlphaGenome_tutorial

./: README.md  pyproject.toml
src/: main.py  quick_start.ipynb
